Fixed btn & add some stuff

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-smooth-scrollbar": "^8.0.6",
     "react-spring": "^9.0.0",
     "react-transition-group": "^4.4.1",
+    "smooth-scrollbar": "^8.6.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
